7948 Ryddet opp i kompilator-warnings etter Spring Boot 4.0-oppgradering
Erstattet deprecated ObjectMapper-konstruksjon med JsonMapper.builder()
for å fjerne MapperFeature.enable()-warning. La til WebConfigObjectMapperTest
som verifiserer ObjectMapper-konfigurasjonen.


Fjernet warnings fra egne endringer (StringUtils.isEmpty, unødvendig cast)

Erstattet deprecated StringUtils.isEmpty() med !StringUtils.hasText() i
FellesKodeverkSerializer. Fjernet unødvendig cast i KafkaConfig.kt.
La til tester for FellesKodeverkSerializer.


Ryddet opp i kompilator-warnings på tvers av moduler

- Locale() → Locale.of() (Java 21)
- Fjernet unødvendige !! og ?. på non-null typer
- Fjernet redundante else i exhaustive when-uttrykk
- Fjernet overflødig elvis-operator på non-nullable
- Rettet parameternavn til å matche interface (orgnummer, fattVedtakRequest)
- @NonNullApi → @NullMarked (jspecify)
- isNullOrEmpty() → isEmpty() på non-null Set
- JsonNode? → JsonNode i valueToTree


Fjernet gjenstående kompilator-warnings

- KafkaConfig: fjernet unødvendig @Suppress og cast
- SpringSubjectHandler: getTokenAsString() → getEncodedToken()
- MedlServiceTest/UtbetaltdataServiceTest: readValue(URL) → readValue(URL.openStream())
- NumericStringRandomizer: randomNumeric() → insecure().nextNumeric()
- AnmodningUnntakServiceTest: random() → insecure().next()
- AvklartefaktaOppsummeringDto: fjernet internal fra constructor
- FeatureToggleConfigLocal: @Suppress("DEPRECATION") for Unleash environment()


Fjernet @Suppress("DEPRECATION")-annotasjoner vi la til